Fixed multiple props or reviews for current user overflowing on x axis

--- a/frontend/src/components/Properties/UsersProperties.css
+++ b/frontend/src/components/Properties/UsersProperties.css
@@ -26,4 +26,6 @@
 .users-properties-container {
   display: flex;
   justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
