--- a/frontend/src/components/Reviews/UsersReviews.css
+++ b/frontend/src/components/Reviews/UsersReviews.css
@@ -70,4 +70,6 @@
 .users-reviews-container {
   display: flex;
   justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
